# internal/domain/resouce_tracking.go
@@ -1,8 +1,7 @@
 package domain
 
-// swagger:parameters CreateMachineResourceUsage
+// swagger:model CreateMachineResourceUsage
 type CreateMachineResourceUsageParams struct {
-	// in: body
 	Machine string `json:"machine" validate:"required"`
 	Metric1 *int32  `json:"metric1" validate:"required"`
 	Metric2 *int32  `json:"metric2" validate:"required"`
@@ -23,8 +22,10 @@ type GetAggMachineResourceUsageParams struct {
 	// in: path
 	Machine        string `json:"machine" validate:"required"`
 	// in: query
+	// PostgreSQL INTERVAL data type e.g. '5 minutes', '1 hour', '1 day'
 	TimeBucket     string `json:"timeBucket" validate:"required"`
 	// in: query
+	// PostgreSQL INTERVAL data type e.g. '1 hour', '1 day', '23 hours'
 	LookBackPeriod string `json:"lookBackPeriod" validate:"required"`
 }
 
